<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sfondosfumato"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Titolo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/misure"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/scarico"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/misure_c"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_h01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TV_h01" />

                <EditText
                    android:id="@+id/ET_h11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_h02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TV_h02" />

                <EditText
                    android:id="@+id/ET_h12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_h03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TV_h03" />

                <EditText
                    android:id="@+id/ET_h13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/misure_c_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            android:text="@string/txt_back" />

        <Button
            android:id="@+id/misure_c_fwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"

            android:text="@string/btn_risultati" />
    </LinearLayout>


</LinearLayout>