<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sfondosfumato"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Titolo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/misure"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/scarico"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/misure_s"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TV_hb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/TV_hb" />

                <EditText
                    android:id="@+id/ET_hb"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="1000"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TV_h01"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:text="@string/TV_h01" />

                <EditText
                    android:id="@+id/ET_h01"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="1000"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_h02"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:text="@string/TV_h02" />

                <EditText
                    android:id="@+id/ET_h02"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="1000"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_h03"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:text="@string/TV_h03" />

                <EditText
                    android:id="@+id/ET_h03"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="1000"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_ht"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:text="@string/TV_ht" />

                <EditText
                    android:id="@+id/ET_ht"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="1000"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/misure_s_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            android:text="@string/txt_back" />

        <Button
            android:id="@+id/misure_s_fwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"

            android:text="@string/txt_btn_imm" />
    </LinearLayout>


</LinearLayout>