<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_project_info"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sfondosfumato"
    android:orientation="vertical"
    tools:context="com.example.pier.imcs.ProjectInfo">

    <TextView
        android:id="@+id/TV_risultati"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/TV_prjinfo"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/txt_view_idAlbero"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/identificativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/txt_view_marcaAlbero"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/TV_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/txt_mledit_note"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.57"
                android:cursorVisible="true"
                android:ems="10"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:text="dfbdfb"
                android:textSize="20sp"
                android:textStyle="normal|italic" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            android:text="@string/txt_back" />

        <Button
            android:id="@+id/btn_geom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            android:text="@string/txt_btn_imm" />
    </LinearLayout>


</LinearLayout>
